# youtube-tutorials

./: .gitignore  README.md
tutorials/calendar-agent/: README.md
tutorials/calendar-agent/docs/: PRD.md  google-credentials-setup.md
tutorials/calendar-agent/langgraph-agent/: agent.py  pyproject.toml
tutorials/calendar-agent/no-framework/: agent.py  pyproject.toml
tutorials/calendar-agent/pydantic-agent/: agent.py  calendar_service.py  pyproject.toml
tutorials/calendar-agent/pydantic-agent/tests/: conftest.py
tutorials/calendar-agent/pydantic-agent/tests/integration/: test_agent.py
tutorials/intent-based-classification/: 01_intent_classification.ipynb  README.md  example.py  intent_classifier.py  pyproject.toml  retrieval.py  router.py
tutorials/micro-agents-demo/: .gitignore  AGENTS.md  README.md  pyproject.toml
tutorials/micro-agents-demo/context/: script-guide.md  title-guide.md
tutorials/micro-agents-demo/context/templates/: metadata.md
tutorials/micro-agents-demo/docs/: design.md  spec.md
tutorials/micro-agents-demo/tools/: youtube.py
tutorials/slash-commands/: README.md
tutorials/slash-commands/.claude/commands/: commit.md  debug.md  plan.md  review.md  security.md  task.md  test.md
tutorials/slash-commands/.opencode/command/: design.md  task.md
tutorials/slash-commands/docs/: commands.md
tutorials/slash-commands/examples/: README.md
tutorials/slash-commands/examples/rag-chatbot/: .gitignore  README.md  main.py  pyproject.toml
tutorials/slash-commands/examples/rag-chatbot/scripts/: init_db.sql
tutorials/slash-commands/examples/rag-chatbot/src/: __init__.py  config.py  database.py
tutorials/slash-commands/examples/rag-chatbot/src/api/: __init__.py  chat.py  documents.py
tutorials/slash-commands/examples/rag-chatbot/src/models/: __init__.py  chunk.py  document.py
tutorials/slash-commands/examples/rag-chatbot/src/services/: __init__.py  documents.py  embeddings.py  rag.py  vector_store.py
tutorials/slash-commands/examples/rag-chatbot/static/: app.js  index.html  styles.css
tutorials/slash-commands/examples/rag-chatbot/tests/: conftest.py  test_documents.py
tutorials/slash-commands/examples/todo-api/: main.py  pyproject.toml
tutorials/slash-commands/examples/todo-api/tests/: test_api.py
tutorials/slash-commands/workspace/designs/: rag-chatbot.md
tutorials/slash-commands/workspace/tasks/rag-chatbot/: task-1.md  task-2.md  task-3.md  task-4.md  task-5.md  task-6.md  task-7.md
tutorials/spec-driven-development/: README.md
tutorials/spec-driven-development/commands/: commit.md  review.md  spec.md  task.md  tasks.md
tutorials/spec-driven-development/examples/: hybrid-search.md  jwt-authentication.md  streaming-chat.md  youtube.md
tutorials/spec-driven-development/examples/ai-chat-endpoint/: plan.md  tasks.md
tutorials/spec-driven-development/examples/pgvector-hybrid-search/: plan.md  tasks.md
tutorials/youtube-agent/: .env-sample  CLAUDE.md  README.md  pyproject.toml
tutorials/youtube-agent/docs/: MICRO_AGENT_GUIDE.md  description_guide.md  description_template.md
tutorials/youtube-agent/transcripts/: CEvIs9y1uog.md  FwOTs4UxQS4.md  MsQACpcuTkU.md  UiCEejcV5N4.md
