[project]
name = "calendar-agent-langgraph"
version = "0.1.0"
description = "Calendar agent using LangGraph"
requires-python = ">=3.11"
dependencies = [
    "langgraph",
    "langchain-openai",
    "google-auth-oauthlib",
    "google-api-python-client",
]

[tool.uv]
dev-dependencies = [
    "pytest",
    "pytest-asyncio",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
