[project]
name = "rag-chatbot"
version = "0.1.0"
description = "A RAG chatbot with document upload and vector search"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "anthropic>=0.18.0",
    "openai>=1.12.0",
    "asyncpg>=0.29.0",
    "pgvector>=0.2.4",
    "python-multipart>=0.0.6",
    "pydantic-settings>=2.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ipykernel>=6.29.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
